--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 					<h4>My favorite food is PIZZA.</h4>
 					<h4>If I could be any animal, I would be A CAT.</h4>
 			</div>
+            <p>I enjoy learning new skills</p>
 		  </body>
 		</html>
